--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "hono": "^4.6.9",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.0.3",
+    "react": "^19.0.0-rc-5c56b873-20241107",
+    "react-dom": "^19.0.0-rc-5c56b873-20241107"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "1",
@@ -25,7 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^15.0.3",
     "eslint-plugin-next-on-pages": "^1.13.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
