--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "hono": "^4.6.9",
     "next": "^15.0.3",
+    "prisma": "^5.22.0",
     "react": "^19.0.0-rc-5c56b873-20241107",
     "react-dom": "^19.0.0-rc-5c56b873-20241107"
   },
